--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,34 @@
 body {
-  margin: 0;
+  margin: 25px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.App{
+  display: flex;
+}
+
+.numbers{
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  border: 1px solid #000;
+  border-radius: 50%;
+  margin-right: 30px;
+}
+
+.newNumbers{
+  margin-right: 10px;
+}
+
+.item{
+  display: inline;
+}
+
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
